* App.xaml.cs: Added tenants page
* Unit.cs:
* ManageGo.csproj:
* Tenant.cs:
* APIpaths.cs:
* TenantsPage.xaml:
* WelcomePage.xaml:
* DataAccess.cs:
* UnitsListPage.xaml:
* MasterMenuPage.xaml:
* TenantsPage.xaml.cs:
* UnitsListPage.xaml.cs:
* BuildingsListPage.xaml:
* BaseDetailPage.cs:
* TenantsPageModel.cs:
* Welcomepagemodel.cs:
* BuildingsListPage.xaml.cs:
* UnitsListPageModel.cs:
* MasterMenuPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TenantFilterSelectView.xaml:
* BuildingsListPageModel.cs:
* TenantFilterSelectView.xaml.cs:

--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -3,7 +3,7 @@
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
              xmlns:local="clr-namespace:ManageGo"
-             BackgroundColor="#f9fafb"
+             BackgroundColor="White"
              x:Name="ThisPage"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MaintenanceTicketsPage">
