--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -1,5 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.BuildingsListPage">
-    <ContentPage.Content>
-    </ContentPage.Content>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true"
+             x:Name="ThisPage"
+             xmlns:local="clr-namespace:ManageGo"
+             x:Class="ManageGo.BuildingsListPage">
+     <RelativeLayout>
+        <Grid RowSpacing="0"
+              RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
+                             Property=Height, Factor=1, Constant=0}"
+              RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,
+                             Property=Width, Factor=1, Constant=0}" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0" BackgroundColor="White" Orientation="Horizontal" Padding="8" HeightRequest="42">
+                <Button BackgroundColor="Transparent"
+                        Command="{Binding OnMasterMenuTapped}"
+                        HorizontalOptions="Start"
+                        WidthRequest="42"
+                        IsVisible="{Binding HamburgerIsVisible}"
+                        VerticalOptions="CenterAndExpand"
+                        Image="nav_menu_icon.png" />
+                <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            </StackLayout>
+            <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
+                <Label Text="Buildings" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                <BoxView HeightRequest="1" BackgroundColor="#85bafa" />
+            </StackLayout>
+            <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
+                <ListView ItemsSource="{Binding Buildings}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="8">
+                                    <StackLayout Orientation="Horizontal" Spacing="17">
+                                        <Image Source="building_grey.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
+                                        <StackLayout HorizontalOptions="FillAndExpand">
+                                            <Label Text="{Binding BuildingName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
+                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                                        </StackLayout>
+                                    </StackLayout>
+                                </Frame>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
+             <Frame IsVisible="{Binding IsSearching}" 
+                    Grid.Row="2" HasShadow="false" 
+                    BackgroundColor="#99000000" 
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand">
+            <StackLayout>
+                <ActivityIndicator Color="White" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
+                <Label Text="Searching..." TextColor="White"/>
+            </StackLayout>
+        </Frame>
+        </Grid>
+       
+    </RelativeLayout>
 </ContentPage>
