--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -46,7 +46,7 @@
                                             <Label Text="{Binding BuildingName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
                                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
                                             <StackLayout Orientation="Horizontal" Spacing="4">
-                                                <StackLayout Orientation="Horizontal" Spacing="2">
+                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
                                                     <Label Text="Units:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding UnitCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
                                                     <StackLayout.GestureRecognizers>
@@ -54,7 +54,7 @@
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                                 <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
-                                                <StackLayout Orientation="Horizontal" Spacing="2">
+                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
                                                     <Label Text="Tenants:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding TenantCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
                                                     <StackLayout.GestureRecognizers>
@@ -62,8 +62,13 @@
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                                 <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
-                                                <Label Text="Open tickets:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                <Label Text="{Binding OpenTicketCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
+                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
+                                                    <Label Text="Open tickets:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
+                                                    <Label Text="{Binding OpenTicketCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
+                                                    <StackLayout.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding BindingContext.OnTicketsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                                    </StackLayout.GestureRecognizers>
+                                                </StackLayout>
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
