--- a/ManageGo/Views/TenantsPage.xaml
+++ b/ManageGo/Views/TenantsPage.xaml
@@ -28,6 +28,14 @@
                         IsVisible="{Binding HamburgerIsVisible}"
                         VerticalOptions="CenterAndExpand"
                         Image="nav_menu_icon.png" />
+                  <Button BackgroundColor="Transparent"
+                    Command="{Binding OnBackbuttonTapped}"
+                    HorizontalOptions="Start"
+                    WidthRequest="42"
+                    Rotation="180"
+                    IsVisible="{Binding BackbuttonIsVisible}"
+                    VerticalOptions="CenterAndExpand"
+                    Image="arrow_right.png" />
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
@@ -99,14 +107,21 @@
             </StackLayout>
              <Frame IsVisible="{Binding IsSearching}" 
                     Grid.Row="2" HasShadow="false" 
-                    BackgroundColor="#99000000" 
+                    BackgroundColor="Transparent" 
                     VerticalOptions="CenterAndExpand" 
                     HorizontalOptions="CenterAndExpand">
+               
             <StackLayout>
-                <ActivityIndicator Color="White" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
-                <Label Text="Searching..." TextColor="White"/>
+                <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
+                <Label Text="Searching..." FontSize="Small" TextColor="Gray"/>
             </StackLayout>
         </Frame>
+            <StackLayout Grid.Row="2" VerticalOptions="CenterAndExpand" 
+                         IsVisible="{Binding NothingFetched}" 
+                    HorizontalOptions="CenterAndExpand">
+                <Label Text="Nothing to see here" HorizontalTextAlignment="Center" FontSize="Small" FontAttributes="Bold" TextColor="Gray"/>
+                <Label Text="Try a broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
+            </StackLayout>
         </Grid>
        
     </RelativeLayout>
