* App.xaml: Adding Range Picker
* Unit.cs:
* Tenant.cs:
* Payment.cs:
* APIpaths.cs:
* TenantsPage.xaml:
* DataAccess.cs:
* PaymentsPage.xaml:
* UnitsListPage.xaml:
* MGTimePicker.cs:
* MasterMenuPage.xaml:
* MGRangePicker.cs:
* BankTransaction.cs:
* PaymentsPage.xaml.cs:
* TransactionsPage.xaml:
* TenantsPageModel.cs:
* TransactionsPage.xaml.cs:
* PaymentsPageModel.cs:
* MaintenanceTicketsPage.xaml:
* MasterMenuPageModel.cs:
* TransactionsPageModel.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -2,6 +2,9 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.App">
     <Application.Resources>
         <ResourceDictionary>
+            <!-- Format -->
+            <x:String x:Key="FormatDecimalToCurrency">{0:C}</x:String>
+            <x:String x:Key="DateTimeToHeaderString">{0:MMM dd - hh:mm tt}</x:String>
              <!-- Colors -->
             <Color x:Key="Primary">#3E90F4</Color>
             <Color x:Key="Secondary">#60A6F5</Color>
