--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -35,12 +35,12 @@
                 <BoxView />
                 <Grid Margin="0,0,4,0">
                     <Label Text="Payments" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
-                    <Button Text="Payments" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
+                    <Button Text="Payments" Command="{Binding PaymentsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView />
                 <Grid Margin="0,0,4,0">
                     <Label Text="Bank transactions" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
-                    <Button Text="Bank transactions" VerticalOptions="CenterAndExpand" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="FillAndExpand"/>
+                    <Button Text="Bank transactions" Command="{Binding OnTransactionsTapped}" VerticalOptions="CenterAndExpand" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="FillAndExpand"/>
                 </Grid>
                 <BoxView />
                 <Grid Margin="0,0,4,0">
@@ -63,10 +63,6 @@
                     <Button Text="Tenants" Command="{Binding OnTenantsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView />
-                <Grid Margin="0,0,4,0">
-                    <Label Text="Notifications" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
-                    <Button Text="Notifications" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
-                </Grid>
                 <BoxView />
                 <Grid Margin="0,0,4,0">
                     <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
@@ -83,7 +79,7 @@
                     <Button Text="Logout" Command="{Binding OnLogoutTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView />
-                <Label Text="Contact us" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" FontSize="Small" Margin="0,8,0,0" />
+                <Label Text="Contact us" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" FontSize="Small" Margin="0,24,0,0" />
                 <StackLayout Orientation="Horizontal" Margin="0,8,0,0">
                     <Label Text="Email: " TextColor="Gray" FontSize="Small"/>
                     <Label Text="support@managego.com" TextColor="#318bfa" FontSize="Small">
