--- a/ManageGo/Views/PaymentFilterView.xaml
+++ b/ManageGo/Views/PaymentFilterView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:local="clr-namespace:ManageGo"
     xmlns:controls="clr-namespace:ManageGo.Controls"
+    x:Name="ThisPage"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     x:Class="ManageGo.Views.PaymentFilterView">
         <ScrollView>
@@ -19,7 +20,8 @@
                     <local:CustomEntry Placeholder="Search..." Text="{Binding FilterKeywords}" FontSize="Small"  HorizontalOptions="FillAndExpand" />
                 </StackLayout>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                  <!--
+             
+                <!-- date filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -31,7 +33,7 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                   
-                    <Label Grid.Column="0" Grid.Row="0" Text="Date" TextColor="{Binding FilterDueDateColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Grid.Row="0" Text="Date" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <Grid IsVisible="{Binding FilterDueDateExpanded}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -51,8 +53,8 @@
                     </Image>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                -->
-                <!--
+                
+                <!-- building filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -84,8 +86,8 @@
                     </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                -->
-                <!--
+               
+                 <!-- unit filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -105,7 +107,7 @@
                                     <ViewCell>
                                         <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
                                             <Image Source="{Binding CheckBoxImage}" />
-                                            <Label Text="{Binding ShortAddress}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
+                                            <Label Text="{Binding UnitName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
                                                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnUnitTapped, Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
                                             </StackLayout.GestureRecognizers>
@@ -122,7 +124,7 @@
                     </Image>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                -->
+                <!-- tenant filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -133,16 +135,16 @@
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedTenantString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
                             <Image.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Units" />
+                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Tenants" />
                             </Image.GestureRecognizers>
                         </Label>
-                        <controls:NestedListView IsVisible="{Binding FilterUnitsExpanded}" ItemsSource="{Binding Units}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
+                        <controls:NestedListView IsVisible="{Binding FilterTenantsExpanded}" ItemsSource="{Binding Tenants}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
                                         <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
                                             <Image Source="{Binding CheckBoxImage}" />
-                                            <Label Text="{Binding ShortAddress}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
+                                            <Label Text="{Binding FullName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
                                                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnTenantTapped, Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
                                             </StackLayout.GestureRecognizers>
@@ -159,6 +161,7 @@
                     </Image>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- status filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -174,31 +177,31 @@
                         </Label>
                         <StackLayout IsVisible="{Binding FilterStatusExpanded}">
                             <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
-                                <Image Source="{Binding OpenTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding ReceivedPaymentsCheckBoxImage}" />
                                 <Label Text="Received" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Open" />
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Received" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
                             <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
-                                <Image Source="{Binding ClosedTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding SentPaymentsCheckBoxImage}" />
                                 <Label Text="Sent" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Closed" />
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Sent" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
                             <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
-                                <Image Source="{Binding ClosedTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding ReversedPaymentsCheckBoxImage}" />
                                 <Label Text="Reversed" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Closed" />
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Reversed" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
                             <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
-                                <Image Source="{Binding ClosedTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding RefundedPaymentsCheckBoxImage}" />
                                 <Label Text="Refunded" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Closed" />
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Refunded" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
                         </StackLayout>
@@ -210,7 +213,7 @@
                     </Image>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                
+                <!-- Amount range filter -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -221,14 +224,7 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                  
-                    <Label Grid.Column="0" Grid.Row="0" Text="Amount" TextColor="{Binding FilterDueDateColor}" FontSize="Small" />
-                    <Grid IsVisible="{Binding FilterDueDateExpanded}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                    </Grid>
+                    <Label Grid.Column="0" Grid.Row="0" Text="Amount" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding FilterAmountString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
