* App.xaml: Added transaction filtering
* App.xaml.cs:
* Tenant.cs:
* Payment.cs:
* APIpaths.cs:
* LoginPage.xaml:
* BankAccount.cs:
* DataAccess.cs:
* TenantsPage.xaml:
* PaymentsPage.xaml:
* MGRangePicker.cs:
* BankTransaction.cs:
* TransactionsPage.xaml:
* LoginPageModel.cs:
* PaymentsPageModel.cs:
* EditTicketDetailsView.xaml:
* MasterMenuPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TenantFilterSelectView.xaml:
* TicketFilterSelectView.xaml:
* TransactionsFilterPage.xaml:
* TransactionsPageModel.cs:
* TransactionsFilterPage.xaml.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -3,7 +3,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <!-- Format -->
-            <x:String x:Key="FormatDecimalToCurrency">{0:C}</x:String>
+            <x:String x:Key="FormatDecimalToCurrency">{0:$#,##0.00}</x:String>
             <x:String x:Key="DateTimeToHeaderString">{0:MMM dd - hh:mm tt}</x:String>
              <!-- Colors -->
             <Color x:Key="Primary">#3E90F4</Color>
