--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -51,15 +51,38 @@
                     <ColumnDefinition Width="1" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Image="calendar_blue.png" Text="{Binding CalendarButtonText}" HorizontalOptions="Center" BackgroundColor="Transparent" Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnCalendarButtonTapped}" Clicked="Handle_Clicked" Grid.Column="0" TextColor="{StaticResource Grey-Dark-1}"   />
-                <BoxView Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
-                <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                    <Button HorizontalOptions="Start" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" Clicked="Handle_Clicked" TextColor="{StaticResource Grey-Dark-1}" Image="filter_blue.png" Text="Filter"  />
-                    <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="Start" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
+                <StackLayout Grid.Column="0" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
+                        <Image Source="calendar_blue.png" VerticalOptions="Center" />
+                        <Label Text="{Binding CalendarButtonText}" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnCalendarButtonTapped}"/>
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <BoxView WidthRequest="1" Margin="0,4,0,4" HorizontalOptions="Start" Grid.Column="1" BackgroundColor="{StaticResource Grey-Mid-2}"/>
+                    <StackLayout Grid.Column="2" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
+                        <Image Source="filter_blue.png" VerticalOptions="Center" />
+                        <Label Text="Filter" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="Start" Margin="2,8,0,0" HorizontalTextAlignment="Start" FontSize="Small" TextColor="#318bfa"/>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}"/>
+                        </StackLayout.GestureRecognizers>
                 </StackLayout>
             </Grid>
             <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
             <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
+            <StackLayout IsVisible="{Binding FilterSelectViewIsShown}" MinimumHeightRequest="75">
+                    <Grid Padding="14,8,18,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Reset" Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" />
+                        <Button Grid.Column="1" FontSize="Medium" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" Padding="18,0,18,0" />
+                        <Button Grid.Column="2" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
+                    </Grid>
+                    <BoxView HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+            </StackLayout>
             <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
         </StackLayout>
        
@@ -123,14 +146,22 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        
-         <Frame IsVisible="{Binding IsSearching}" Grid.Row="2" HasShadow="false" BackgroundColor="#99000000" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+        <Frame IsVisible="{Binding IsLoading}" BackgroundColor="Transparent" Grid.Row="2" HasShadow="false"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
             <StackLayout>
-                <ActivityIndicator Color="White" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
-                <Label Text="Searching..." TextColor="White"/>
+                <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" />
+                <Label Text="Searching..." FontSize="Small" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="{StaticResource Grey-Dark-1}"/>
             </StackLayout>
         </Frame>
+              <StackLayout Grid.Row="2" VerticalOptions="CenterAndExpand" 
+                         IsVisible="{Binding NothingFetched}" 
+                    HorizontalOptions="CenterAndExpand">
+                <Label Text="Nothing to see here" HorizontalTextAlignment="Center" FontSize="Small" FontAttributes="Bold" TextColor="Gray"/>
+                <Label Text="Try a broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
+            </StackLayout>
     </Grid>
+        
+       
+        
         <!-- button for creating new ticket -->
         <Image Source="plus_1_1.png" 
                x:Name="AddNewTicketButton"
