--- a/ManageGo/Views/TenantsPage.xaml
+++ b/ManageGo/Views/TenantsPage.xaml
@@ -40,13 +40,26 @@
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
                 <Label  Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
-                 <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
-                <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                    <Button HorizontalOptions="Center" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
+                <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
+                <StackLayout HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
+                    <Button Text="Filter" ContentLayout="Left,4"  HorizontalOptions="CenterAndExpand" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" TextColor="Black" Image="filter_blue.png"  />
                     <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
                 </StackLayout>
                 <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
                 <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
+                 <StackLayout IsVisible="{Binding FilterSelectViewIsShown}" MinimumHeightRequest="75">
+                    <Grid Padding="14,8,18,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Reset"  Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="Start" />
+                        <Button Grid.Column="1" FontSize="Medium" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" Padding="18,0,18,0" />
+                        <Button Grid.Column="2" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel"  Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
+                    </Grid>
+                    <BoxView HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                </StackLayout>
                 <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
