--- a/ManageGo/Views/TransactionsPage.xaml
+++ b/ManageGo/Views/TransactionsPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+              xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Name="ThisPage"
              xmlns:local="clr-namespace:ManageGo"
              x:Class="ManageGo.TransactionsPage">
@@ -47,17 +48,38 @@
                         <ColumnDefinition Width="1" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <StackLayout Grid.Column="0" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                        <Button Text="{Binding CalendarButtonText}" HorizontalOptions="Center" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" TextColor="Black" Image="calendar_blue.png"   />
+                   <StackLayout Grid.Column="0" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
+                        <Image Source="calendar_blue.png" VerticalOptions="Center" />
+                        <Label Text="{Binding CalendarButtonText}" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}"/>
+                        </StackLayout.GestureRecognizers>
                     </StackLayout>
                     <BoxView WidthRequest="1" Margin="0,4,0,4" HorizontalOptions="Start" Grid.Column="1" BackgroundColor="{StaticResource Grey-Mid-2}"/>
-                    <StackLayout Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                        <Button HorizontalOptions="Center" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
-                        <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
+                    <StackLayout Grid.Column="2" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
+                        <Image Source="filter_blue.png" VerticalOptions="Center" />
+                        <Label Text="Filter" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="Start" Margin="2,8,0,0" HorizontalTextAlignment="Start" FontSize="Small" TextColor="#318bfa"/>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}"/>
+                        </StackLayout.GestureRecognizers>
                     </StackLayout>
                 </Grid>
                 <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
                 <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
+                <StackLayout IsVisible="{Binding FilterSelectViewIsShown}" MinimumHeightRequest="75">
+                    <Grid Padding="14,8,18,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Reset" Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" />
+                        <Button Grid.Column="1" FontSize="Medium" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" Padding="18,0,18,0" />
+                        <Button Grid.Column="2" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
+                    </Grid>
+                    <BoxView HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                </StackLayout>
                 <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
@@ -107,7 +129,29 @@
                                                     <Label Text="{Binding BuildingsCount}"  FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
                                                 <Label Text="Payments: " FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
-
+                                                <!-- list transaction payments -->
+                                                <controls:NestedListView ItemsSource="{Binding Payments}" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="true" >
+                                                    <ListView.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <ViewCell>
+                                                                <StackLayout>
+                                                                    <Label VerticalTextAlignment="Center">
+                                                                        <Label.FormattedText>
+                                                                            <FormattedString>
+                                                                                <Span Text="{Binding Amount,StringFormat={StaticResource FormatDecimalToCurrency}}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}"/>
+                                                                                <Span Text="  &#9679;  " FontSize="Micro" TextColor="{StaticResource Grey-Light-1}" />
+                                                                                <Span Text="{Binding TransactionDate,StringFormat={StaticResource DateTimeToHeaderString}}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}"/>
+                                                                                <Span Text="  &#9679;  " FontSize="Micro" TextColor="{StaticResource Grey-Light-1}" />
+                                                                                <Span Text="{Binding TransactionNumber}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
+                                                                            </FormattedString>
+                                                                        </Label.FormattedText>
+                                                                    </Label>
+                                                                    <Label Text="{Binding ShortDescription}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
+                                                                </StackLayout>
+                                                            </ViewCell>
+                                                        </DataTemplate>
+                                                    </ListView.ItemTemplate>
+                                                </controls:NestedListView>
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
@@ -135,6 +179,50 @@
                 <Label Text="Try a broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
             </StackLayout>
         </Grid>
-       
+         <Grid
+            RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=1}"
+            RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=1}"
+            RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=0}"
+            RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0}"
+            BackgroundColor="#99000000"
+            IsVisible="{Binding RangeSelectorIsShown}">
+            <Grid.GestureRecognizers>
+                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnDismissPopupTapped}" />
+            </Grid.GestureRecognizers>
+        </Grid>
+       <Frame
+            RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=0.7}"
+            RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0.75}"
+            RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=0.175}"
+            RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0.1875}"
+            BackgroundColor="White"
+            HasShadow="false"
+            IsVisible="{Binding RangeSelectorIsShown}"
+            >
+           <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Text="Amount range:" TextColor="{StaticResource Grey-Dark-1}" Margin="0,0,0,17" FontSize="Medium" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center"/>
+                <Frame Grid.Row="1" Padding="22,12,22,12" WidthRequest="90" CornerRadius="23" VerticalOptions="Center" HasShadow="false" BackgroundColor="#e0eefd"  HorizontalOptions="Center" >
+                    <Label Text="{Binding RangeSelectorMax}" HorizontalOptions="CenterAndExpand" TextColor="{StaticResource Primary}" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                </Frame>
+                <ContentView Content="{Binding RangePickerView}" Grid.Row="2" />
+                <Frame Grid.Row="3" Padding="22,12,22,12" WidthRequest="90" CornerRadius="23" VerticalOptions="Center" HasShadow="false" BackgroundColor="#e0eefd"  HorizontalOptions="Center" >
+                    <Label Text="{Binding RangeSelectorMin}" HorizontalOptions="CenterAndExpand" TextColor="{StaticResource Primary}" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                </Frame>
+                 <Frame Grid.Row="4" Padding="22,12,22,12"  CornerRadius="21" VerticalOptions="Center" Margin="0,17,0,0" HasShadow="false" BackgroundColor="{StaticResource Primary}"  HorizontalOptions="Center" >
+                    <Label Text="Apply amount range" HorizontalOptions="CenterAndExpand" TextColor="White" FontSize="Medium"  FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer NumberOfTapsRequired="1" 
+                                              Command="{Binding OnApplyFilterRangeButtonTapped}" />
+                    </Frame.GestureRecognizers>
+                </Frame>
+            </Grid>
+        </Frame> 
     </RelativeLayout>
 </ContentPage>
